fix align center

--- a/source/css/_wysiwyg.scss
+++ b/source/css/_wysiwyg.scss
@@ -65,8 +65,7 @@
     }
 
     .text-center img,
-    img.text-center,
-     {
+    img.text-center {
         display: block;
         margin-left: auto;
         margin-right: auto;
